# Flight-observatory

./: .gitignore  README.md  pyproject.toml
.github/workflows/: monitor.yml
automation-reference/: README.md  ci.yml  monitor.yml  tripwire.yml
data/: collection_log.csv  fares.csv
scripts/: build_report.py  collect.py
src/macau_fare_monitor/: __init__.py  alert.py  analysis.py  benchmark.py  config.py  defense.py  loader.py  models.py  report.py  staleness.py  validate.py  verdict.py
tests/: test_alert.py  test_benchmark.py  test_data_integrity.py  test_defense.py  test_validate.py  test_verdict.py
tripwire/: README.md  airbusan_lookup.py  airbusan_manual.csv  checklist_notifier.py  consumer_prices.csv  evaluate_tripwire.py  guardrail.gs  meta_source.py  naver_deeplink.py  pushover.py  run_tripwire.sh  sheet_guardrail.py  sheet_today.csv  sku_catalog.json  submit_price.py
tripwire/launchd/: com.yestravel.tripwire.plist
